started to make it procedural

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.geekbrains.architect</groupId>
-    <artifactId>parser</artifactId>
+    <groupId>ru.geekbrains</groupId>
+    <artifactId>architect</artifactId>
     <version>1</version>
 
     <properties>
@@ -35,11 +35,10 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <finalName>parser</finalName>
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        ru.geekbrains.architect.ParserCLIKt
+                                        ru.geekbrains.architect.parser.oop.ParserCLIKt
                                     </mainClass>
                                 </manifest>
                             </archive>
